syntax = "proto3";

package config;

option go_package = "github.com/utmstack/UTMStack/plugins/modules-config/config";

service ConfigService {
    rpc StreamConfig(stream BiDirectionalMessage) returns (stream BiDirectionalMessage);
}

enum PluginType {
    UNKNOWN = 0;
    SOPHOS = 1;
    SOC_AI = 2;
}

message BiDirectionalMessage {
    oneof payload {
        PluginInit plugin_init = 1;
        ConfigurationSection config = 2;
    }
}

message PluginInit {
    PluginType type = 1;
}

message Configuration {
    int32 id = 1;
    int32 groupId = 2;
    string confKey = 3;
    string confValue = 4;
    string confName = 5;
    string confDescription = 6;
    string confDataType = 7;
    bool confRequired = 8;
}

message ModuleGroup {
    int32 id = 1;
    int32 moduleId = 2;
    string groupName = 3;
    string groupDescription = 4;
    repeated Configuration moduleGroupConfigurations = 5;
    string collector = 6;
}

message ConfigurationSection {
    int32 id = 1;
    int32 serverId = 2;
    string prettyName = 3;
    string moduleName = 4;
    string moduleDescription = 5;
    bool moduleActive = 6;
    string moduleIcon = 7;
    string moduleCategory = 8;
    bool liteVersion = 9;
    bool needsRestart = 10;
    repeated ModuleGroup moduleGroups = 11;
    bool activatable = 12;
}